--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ lazy_static = { version = "1.4.0", optional = true }
 regex = { version = "1.10.4", optional = true }
 chrono = "0.4.38"
 rand = "0.8.5"
+lettre = "0.11.7"
+maud = "0.26.0"
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
