--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ lazy_static = { version = "1.4.0", optional = true }
 regex = { version = "1.10.4", optional = true }
 chrono = "0.4.38"
 rand = "0.8.5"
-lettre = "0.11.7"
-maud = "0.26.0"
+lettre ={version = "0.11.7", optional= true}
+maud = {version = "0.26.0", optional=true}
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
@@ -47,7 +47,9 @@ ssr = [
   "dep:diesel",
   "dep:dotenvy",
   "dep:lazy_static",
-  "dep:regex"
+  "dep:regex",
+  "dep:lettre",
+  "dep:maud"
 ]
 dotenvy = ["dep:dotenvy"]
 true = ["dep:true"]
