--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ chrono = "0.4.38"
 rand = "0.8.5"
 lettre ={version = "0.11.7", optional= true}
 maud = {version = "0.26.0", optional=true}
+aes-gcm = "0.10.3"
+hex = "0.4.3"
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
