--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ lettre ={version = "0.11.7", optional= true}
 maud = {version = "0.26.0", optional=true}
 aes-gcm = "0.10.3"
 hex = "0.4.3"
+totp-rs = { version = "5.5.1", features = ["qr"], optional = true }
+image = "0.25.1"
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
@@ -51,12 +53,14 @@ ssr = [
   "dep:lazy_static",
   "dep:regex",
   "dep:lettre",
-  "dep:maud"
+  "dep:maud",
+  "dep:totp-rs"
 ]
 dotenvy = ["dep:dotenvy"]
 true = ["dep:true"]
 lazy_static = ["dep:lazy_static"]
 regex = ["dep:regex"]
+totp-rs = ["dep:totp-rs"]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
