Updating GitHub actions to reflect env changes

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
           
       - name: Init env file
         run: |
-          echo "ENCRYPTION_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" > .env
+          echo "SMTP_ENCRYPTION_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" > .env
         working-directory: rec_temp
 
       - name: Install postgres (Linux)
