--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ maud = {version = "0.26.0", optional=true}
 aes-gcm = "0.10.3"
 hex = "0.4.3"
 totp-rs = { version = "5.5.1", features = ["qr"], optional = true }
+tokio = { version = "1.37.0", features = ["full"], optional = true }
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
@@ -53,13 +54,15 @@ ssr = [
   "dep:regex",
   "dep:lettre",
   "dep:maud",
-  "dep:totp-rs"
+  "dep:totp-rs",
+  "dep:tokio"
 ]
 dotenvy = ["dep:dotenvy"]
 true = ["dep:true"]
 lazy_static = ["dep:lazy_static"]
 regex = ["dep:regex"]
 totp-rs = ["dep:totp-rs"]
+tokio = ["dep:tokio"]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
