--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,34 +7,34 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-actix-files = { version = "0.6", optional = true }
-actix-web = { version = "4", optional = true, features = ["macros"] }
-console_error_panic_hook = "0.1"
-http = { version = "1.0.0", optional = true }
-leptos = { version = "0.6", features = ["nightly"] }
-leptos_meta = { version = "0.6", features = ["nightly"] }
-leptos_actix = { version = "0.6", optional = true }
-leptos_router = { version = "0.6", features = ["nightly"] }
-wasm-bindgen = "=0.2.92"
-actix-session = { version = "0.9.0", features = ["redis-rs-session"], optional=true}
-actix-identity = {version = "0.7.1", optional=true}
-diesel = { version = "2.1.6", features = ["postgres"], optional=true}
+actix-files = { version = "0.6.6", optional = true }
+actix-web = { version = "4.9.0", optional = true, features = ["macros"] }
+console_error_panic_hook = "0.1.7"
+http = { version = "1.1.0", optional = true }
+leptos = { version = "0.6.15", features = ["nightly"] }
+leptos_meta = { version = "0.6.15", features = ["nightly"] }
+leptos_actix = { version = "0.6.15", optional = true }
+leptos_router = { version = "0.6.15", features = ["nightly"] }
+wasm-bindgen = "=0.2.95"
+actix-session = { version = "0.10.1", features = ["redis-session"], optional=true}
+actix-identity = {version = "0.8.0", optional=true}
+diesel = { version = "2.2.4", features = ["postgres"], optional=true}
 dotenvy = { version = "0.15.7", optional = true }
 true = { version = "0.1.0", optional = true }
-serde = { version = "1.0.198", features = ["derive"] }
-serde_json = "1.0.116"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 cfg-if = "1.0.0"
 argon2 = "0.5.3"
-lazy_static = { version = "1.4.0", optional = true }
-regex = { version = "1.10.4", optional = true }
+lazy_static = { version = "1.5.0", optional = true }
+regex = { version = "1.11.1", optional = true }
 chrono = "0.4.38"
 rand = "0.8.5"
-lettre ={version = "0.11.7", optional= true}
+lettre ={version = "0.11.10", optional= true}
 maud = {version = "0.26.0", optional=true}
 aes-gcm = "0.10.3"
 hex = "0.4.3"
-totp-rs = { version = "5.5.1", features = ["qr"], optional = true }
-tokio = { version = "1.37.0", features = ["full"], optional = true }
+totp-rs = { version = "5.6.0", features = ["qr"], optional = true }
+tokio = { version = "1.41.1", features = ["full"], optional = true }
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
