--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,7 +38,7 @@ jobs:
           sudo service postgresql restart && sleep 3
           sudo -u postgres psql -c "ALTER USER postgres PASSWORD 'postgres';"
           sudo service postgresql restart && sleep 3
-          echo "DATABASE_URL=postgres://postgres:postgres@localhost/daily" >> $GITHUB_ENV
+          echo "DATABASE_URL=postgres://postgres:postgres@localhost/test" >> $GITHUB_ENV
           echo "redis://localhost:6379/"
 
       - name: Install diesel
