--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 3000:3000
     environment:
       DATABASE_URL: postgres://${MASTER_USER}:${MASTER_PASS}@leptos_postgres/${DATABASE_NAME}
+      DATABASE_NAME: ${DATABASE_NAME}
       FROM_EMAIL: ${FROM_EMAIL}
       SMTP_KEY: "${SMTP_KEY}"
       TWO_FACTOR_KEY: "${TWO_FACTOR_KEY}"
