--- a/example.env
+++ b/example.env
@@ -24,3 +24,7 @@ MASTER_PASS=verysecretpassword
 
 # Base URL of your site - used for user verification and password reset links
 AUTH_LEPTOS_URL=https://amazingsite.com
+
+# Only needed for local development, uncomment if building and running locally
+# Make sure to update the credentials and database_name to match the other env variables
+# DATABASE_URL=postgres://master_user:master_pass@localhost/database_name
