Adding in log key to fix github action failure

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Init env file
         run: |
           echo "SMTP_ENCRYPTION_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" > .env
+          echo "LOG_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" > .env
           echo "AUTH_LEPTOS_URL=http://localhost:3000/" >> .env
         working-directory: rec_temp
 
