Custom db names (#26)
* Adding option to customize the database name

* Added in the ability to use custom database name, updated readme, added new test

* Adding in log key to fix github action failure

* Fixing bug that overwrote environment variable in github action

--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
+# Database name
+DATABASE_NAME=auth
+
 # Email address to send SMTP messages to users
 FROM_EMAIL=noreply.example@gmail.com
 
@@ -21,3 +24,7 @@ MASTER_PASS=verysecretpassword
 
 # Base URL of your site - used for user verification and password reset links
 AUTH_LEPTOS_URL=https://amazingsite.com
+
+# Only needed for local development, uncomment if building and running locally
+# Make sure to update the credentials and database_name to match the other env variables
+# DATABASE_URL=postgres://master_user:master_pass@localhost/database_name
