--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Init env file
         run: |
           echo "SMTP_ENCRYPTION_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" > .env
+          echo "LOG_KEY=\"${{ secrets.ENCRYPTION_KEY }}\"" >> .env
           echo "AUTH_LEPTOS_URL=http://localhost:3000/" >> .env
         working-directory: rec_temp
 
@@ -38,7 +39,7 @@ jobs:
           sudo service postgresql restart && sleep 3
           sudo -u postgres psql -c "ALTER USER postgres PASSWORD 'postgres';"
           sudo service postgresql restart && sleep 3
-          echo "DATABASE_URL=postgres://postgres:postgres@localhost/daily" >> $GITHUB_ENV
+          echo "DATABASE_URL=postgres://postgres:postgres@localhost/test" >> $GITHUB_ENV
           echo "redis://localhost:6379/"
 
       - name: Install diesel
